Exemplo de gerenciadores de layout

--- a/index.html
+++ b/index.html
@@ -44,6 +44,10 @@
 				<td><a href="Exemplo07">Exemplo07</a></td>
 				<td>Uso da Toolbar.</td>
 			</tr>																				
+			<tr>
+				<td><a href="Exemplo08">Exemplo08</a></td>
+				<td>Exemplos de gerenciadores de layout.</td>
+			</tr>																							
 		</tbody>
 	</table>
 </body>
