Alterações nas configurações de build. Carregando novos exemplos de layouts

--- a/index.html
+++ b/index.html
@@ -46,7 +46,9 @@
 			</tr>																				
 			<tr>
 				<td><a href="Exemplo08">Exemplo08</a></td>
-				<td>Exemplos de gerenciadores de layout.</td>
+				<td>
+					Exemplos de gerenciadores de layout em /res/layout.
+				</td>
 			</tr>																							
 		</tbody>
 	</table>
