--- a/index.html
+++ b/index.html
@@ -49,7 +49,13 @@
 				<td>
 					Exemplos de gerenciadores de layout em /res/layout.
 				</td>
-			</tr>																							
+			</tr>
+			<tr>
+				<td><a href="Exemplo09">Exemplo09</a></td>
+				<td>
+					Mostra a criação de layout com uso da API. Interface baseada no <a href="Exemplo03">Exemplo03.</a>
+				</td>
+			</tr>																											
 		</tbody>
 	</table>
 </body>
