Adicionando novos layouts no Exemplo08.

--- a/index.html
+++ b/index.html
@@ -53,9 +53,15 @@
 			<tr>
 				<td><a href="Exemplo09">Exemplo09</a></td>
 				<td>
-					Mostra a criação de layout com uso da API. Interface baseada no <a href="Exemplo03">Exemplo03.</a>
+					Mostra a criação completa de um layout com uso da API. Interface baseada no <a href="Exemplo03">Exemplo03.</a>
 				</td>
-			</tr>																											
+			</tr>
+			<tr>
+				<td><a href="Exemplo10">Exemplo10</a></td>
+				<td>
+					Mostra a criação de um layout com Adapter.
+				</td>
+			</tr>																															
 		</tbody>
 	</table>
 </body>
