--- a/index.html
+++ b/index.html
@@ -61,7 +61,19 @@
 				<td>
 					Mostra a criação de um layout com Adapter.
 				</td>
-			</tr>																															
+			</tr>
+			<tr>
+				<td><a href="Exemplo11">Exemplo10</a></td>
+				<td>
+					Outros arquivo XML. Cores, Estilos.
+				</td>
+			</tr>
+			<tr>
+				<td><a href="Exemplo12">Exemplo12</a></td>
+				<td>
+					Componentes AutoCompleteTextView e Adapter Customizado para preencher ListView.
+				</td>
+			</tr>																																								
 		</tbody>
 	</table>
 </body>
