Atualizando o index.html

--- a/index.html
+++ b/index.html
@@ -71,9 +71,9 @@
 			<tr>
 				<td><a href="Exemplo12">Exemplo12</a></td>
 				<td>
-					Componentes AutoCompleteTextView e Adapter Customizado para preencher ListView.
+					Componentes: AutoCompleteTextView, Adapter Customizado para preencher ListView, ImageButton, CheckButton.
 				</td>
-			</tr>																																								
+			</tr>
 		</tbody>
 	</table>
 </body>
