Adicionando exemplos com SQLite

--- a/index.html
+++ b/index.html
@@ -96,7 +96,19 @@
 					Uso do ViewPager.
 					Esse exemplo utiliza classes deprecated. Portanto, o único objetivo é didático.
 				</td>
-			</tr>											
+			</tr>
+			<tr>
+				<td><a href="Exemplo16">Exemplo16</a></td>
+				<td>
+					Uso de Fragments com toolbar com TabLayout.
+				</td>
+			</tr>																		
+			<tr>
+				<td><a href="Exemplo17">Exemplo17</a></td>
+				<td>
+				  Uso do SQLite.
+				</td>
+			</tr>															
 		</tbody>
 	</table>
 </body>
