Atualizando index.html

--- a/index.html
+++ b/index.html
@@ -108,7 +108,19 @@
 				<td>
 				  Uso do SQLite.
 				</td>
-			</tr>															
+			</tr>
+			<tr>
+				<td><a href="Exemplo18">Exemplo18</a></td>
+				<td>
+				  Uso do SQLite com SugarORM.
+				</td>
+			</tr>
+			<tr>
+				<td><a href="Exemplo19">Exemplo19</a></td>
+				<td>
+				  Webservice com Slim e Retrofit.
+				</td>
+			</tr>																								
 		</tbody>
 	</table>
 </body>
