--- a/index.html
+++ b/index.html
@@ -120,7 +120,19 @@
 				<td>
 				  Webservice com Slim e Retrofit.
 				</td>
-			</tr>																								
+			</tr>
+			<tr>
+				<td><a href="Exemplo20">Exemplo20</a></td>
+				<td>
+				  Uso de navigation Drawer. Aplicativo para inserção e leitura com webservice.
+				</td>
+			</tr>
+			<tr>
+				<td><a href="Exemplo21">Exemplo21</a></td>
+				<td>
+				  Alarme e Notificações.
+				</td>
+			</tr>																																																										
 		</tbody>
 	</table>
 </body>
