Atualização do index.html

--- a/index.html
+++ b/index.html
@@ -132,7 +132,19 @@
 				<td>
 				  Alarme e Notificações.
 				</td>
+			</tr>
+			<tr>
+				<td><a href="Exemplo22">Exemplo22</a></td>
+				<td>
+				  Animação.
+				</td>
 			</tr>																																																										
+			<tr>
+				<td><a href="Exemplo23">Exemplo21</a></td>
+				<td>
+				  SharedPreferences.
+				</td>
+			</tr>				
 		</tbody>
 	</table>
 </body>
